--- a/frontEnd/css/layout/HorizontalCenterDemo.html
+++ b/frontEnd/css/layout/HorizontalCenterDemo.html
@@ -13,6 +13,7 @@
             width: 300px;
             height: 200px;
             border: solid 1px darkseagreen;
+            margin:auto;
         }
 
         .title{
@@ -23,9 +24,6 @@
         .subTitle{
             font-size:18px;
             margin-bottom: 20px;
-        }
-        .box{
-            margin:auto;
         }
 
         .conclusion{
@@ -91,13 +89,13 @@
     <span style="display:table;margin: 0 auto;">123</span>
 </div>
 
-<div class="subTitle" >使用transform: translate(-50%)</div>
+<div class="subTitle" >使用transform: translateX(-50%)</div>
 <div class="box" style="position:relative">
-    <span style="position: absolute;left:50%;transform: translate(-50%)">123</span>
+    <span style="position: absolute;left:50%;transform: translateX(-50%)">123</span>
 </div>
 
 
-<div class="subTitle" >使用margin:-50%</div>
+<div class="subTitle" >使用margin-left:-50%</div>
 <div class="box" style="position:relative">
     <div style="position: absolute;left:50%;">
         <span style="margin-left:-50%;">123</span>
